--- a/index.html
+++ b/index.html
@@ -1410,8 +1410,8 @@
   <div class="container">
          <!-- Header -->
      <div class="header">
-               <h1>Sinclair Canvas Banner Creator</h1>
-        <div class="version-info">Compiled on August 3, 2025 - Version 2.0 - Hampton</div>
+               <h1>Canvas Banner Creator</h1>
+        <div class="version-info">Build Date August 3, 2025 - Version 3.0 - Hampton</div>
      </div>
 
     <!-- Main Content -->
